--- a/curve/css/home_style.css
+++ b/curve/css/home_style.css
@@ -685,10 +685,10 @@ nav span:nth-child(3) div #switch_view label:hover {
 
 .albumDetails {
     position: relative;
-    width: 90%;
+    width: 70%;
     height: 96%;
-    left: 5%;
-    right: 5%;
+    left: 15%;
+    right: 15%;
     top: 2%;
     background-color: white;
     border-radius: 5px;
@@ -754,10 +754,11 @@ nav span:nth-child(3) div #switch_view label:hover {
 
 #al-list img {
     position: relative;
-    width: 173px;
+    width: 172px;
     height: 150px;
     background-size: cover;
     margin-right: 0;
+    margin-left: 1px;
     margin-bottom: 4px;
     display: inline-block;
     border-radius: 4px;
@@ -1297,11 +1298,12 @@ nav span:nth-child(3) div #switch_view label:hover {
 
 #chatsList {
     position: relative;
-    height: 100%;
+    height: 74vh;
     background-color: rgb(255, 255, 255);
     padding: 7px;
     overflow-y: auto;
     overflow-x: hidden;
+    background-color: blueviolet;
 }
 
 #chat_messages {
