--- a/curve/css/home_style.css
+++ b/curve/css/home_style.css
@@ -853,27 +853,136 @@ nav span:nth-child(3) div #switch_view label:hover {
     display: none;
 }
 
-#uploadImages label {
+#uploadImages,
+#albumInvite{
+    position: fixed;
     width: 100%;
     height: 100%;
-    display: block;
-    cursor: pointer;
-    font-size: 19pt;
-    margin: 10px 10px 7px 7px;
-    text-align: center;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background: rgba(0, 0, 0, .9);
+    display: none;
 }
 
-#uploadImages img {
-    width: 119px;
-    height: 110px;
-    margin-bottom: 3px;
-    margin-right: 3px;
+#uploadControls{
+    height: 85%;
+}
+
+#uploadSection{
+    position: relative;
+    width: 60%;
+    left: 20%;
+    right: 20%;
+    height: 65%;
+    top: 12%;
+    background-color: rgb(255, 255, 255);
+}
+
+#dropzone{
+    position: relative;
+    width: 90%;
+    height: 90%;
+    margin: 18px;
+    background-color: rgba(255, 255, 255, .5);
+    border: 2px dotted black;
+}
+
+#dropzone span{
+    font-size: 57pt;
+    margin: 10px 30px 30px 10px;
+    color: lightgrey;
+    pointer-events: none;
+}
+
+#dropzone span a{
+    pointer-events: all;
+}
+
+#dropzone span b{
+    position: relative;
+    top: 55px;
+    left: 35%;
+}
+
+#dropzone span label{
+    position: relative;
+    top: 45px;
+    font-size: 15pt;
+    display: block;
+}
+
+#dropzone span input{
+    position: absolute;
+    z-index: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+#uploadPreview{
+    background-color: #ef23;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#uploadPreview li{
+    border-top: none;
+    border-left: none;
+    padding-top: 7px;
+    padding-left: 10px;
+    padding-bottom: 8px;
+}
+
+#uploadPreview li span:nth-child(1) img{
     object-fit: cover;
 }
 
-#addImages {
+#uploadPreview li span:nth-child(2){
+    display: inline-block;
+}
+
+#uploadPreview li span:nth-child(2) b{
+    display: block;
+}
+
+#uploadPreview li span:nth-child(2) .imgName{
+    font-size: 15pt;
+    width: 100%;
+    white-space: nowrap;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: lighter;
+}
+
+#uploadPreview li span:nth-child(2) div{
+    overflow-y: hidden;
+    overflow-x: hidden;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: inline-flex;
+}
+
+#uploadPreview li span:nth-child(2) div b{
     position: relative;
-    left: 3px;
+    height: 10px;
+    width: 80%;
+    font-size: 15pt;
+    top: 2px;
+    left: -5px;
+}
+
+#uploadPreview li span:nth-child(2) div b.uploaded{
+    color: green;
+}
+
+#uploadPreview li span:nth-child(2) div .notUploaded{
+    color: red;
+}
+
+#close_album_upload_win{
+    cursor: pointer;
 }
 
 .userProfileWindow, #comments_window {
@@ -1400,4 +1509,64 @@ nav span:nth-child(3) div #switch_view label:hover {
 
 #close_messages_window {
     cursor: pointer;
+}
+
+::selection{
+    background-color: rgba(0, 0, 0, 1);
+    color: white;
+}
+
+::-moz-selection{
+    background-color: rgba(0, 0, 0, 1);
+    color: white;
+}
+
+#inviteSection{
+    position: relative;
+    width: 40%;
+    top: 10%;
+    left: 30%;
+    right: 30%;
+    height: 70%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+}
+
+#albumFriendsList{
+    position: relative;
+    width: 100%;
+    height: 89%;
+    overflow-y: auto;
+    display: inline-block;
+    /* background-color: grey; */
+    border-radius: 0px 0px 5px 5px;
+}
+
+.friendToInvite{
+    width: 32%;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 7px;
+    margin-right: 4px;
+    display: inline-block;
+}
+
+.friendToInvite a{
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.friendToInvite span:nth-child(2){
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
+#albumInvite{
+    display: none;
 }
